--- a/src/components/Currency/Currency.module.scss
+++ b/src/components/Currency/Currency.module.scss
@@ -31,6 +31,7 @@ padding: 0px 70px 0px 0px;
 }
 
 .currency_table_container {
+    margin-top: 100px;
 margin-left: auto;
 margin-right: auto;
 min-width: 280px;
@@ -146,84 +147,84 @@ border-bottom: 0px;
     }
 }
 
-// .currency_sidebar{
-//     display: flex;
-//     justify-content: space-between;
-//     ;
-//     list-style: none;
-//     padding-top: 17px;
-//     padding-left: 44px;
-//     padding-right: 64px;
-// }
+.currency_sidebar{
+    display: flex;
+    justify-content: space-between;
+    ;
+    list-style: none;
+    padding-top: 17px;
+    padding-left: 44px;
+    padding-right: 64px;
+}
 
-// @media screen and (min-width: 768px) and (max-width: 1280px) {
-//     .currency_sidebar {
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+    .currency_sidebar {
 
-//         padding-top: 14px;
-//         padding-left: 20px;
-//         padding-right: 24px;
-//     }
-// }
+        padding-top: 14px;
+        padding-left: 20px;
+        padding-right: 24px;
+    }
+}
 
-// @media screen and (max-width: 767px) {
-//     .currency_sidebar {
+@media screen and (max-width: 767px) {
+    .currency_sidebar {
 
-//         padding-top: 14px;
-//         padding-left: 20px;
-//         padding-right: 20px;
-//     }
-// }
+        padding-top: 14px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
 
-// .currency_table_container {
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//     font-size: 16px;
-//     font-weight: 400;
+.currency_table_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 400;
 
-// }
+}
 
-// @media screen and (min-width: 768px) and (max-width: 1280px) {
-//     .currency_table_container {
-//         align-items: left;
-//         font-size: 16px;
-//         font-weight: 400;
-//     }
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+    .currency_table_container {
+        align-items: left;
+        font-size: 16px;
+        font-weight: 400;
+    }
 
-// }
+}
 
-// .currency_header {
-//     font-size: 18px;
-//     font-weight: bold;
-//     padding-bottom: 36px;
-// }
+.currency_header {
+    font-size: 18px;
+    font-weight: bold;
+    padding-bottom: 36px;
+}
 
-// @media screen and (min-width: 768px) and (max-width: 1280px) {
-//     .currency_header {
-//         padding-bottom: 30px;
-//     }
-// }
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+    .currency_header {
+        padding-bottom: 30px;
+    }
+}
 
-// @media screen and (max-width: 767px) {
-//     .currency_header {
-//         padding-bottom: 26px;
-//     }
-// }
+@media screen and (max-width: 767px) {
+    .currency_header {
+        padding-bottom: 26px;
+    }
+}
 
-// .currency {
-//     font: 16px;
-//     display: flex;
-//     padding-bottom: 12px;
-// }
+.currency {
+    font: 16px;
+    display: flex;
+    padding-bottom: 12px;
+}
 
-// @media screen and (min-width: 768px) and (max-width: 1280px) {
-//     .currency {
-//         padding-bottom: 18px;
-//     }
-// }
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+    .currency {
+        padding-bottom: 18px;
+    }
+}
 
-// @media screen and (max-width: 767px) {
-//     .currency {
-//         padding-bottom: 20px;
-//     }
-// }
+@media screen and (max-width: 767px) {
+    .currency {
+        padding-bottom: 20px;
+    }
+}
